--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,5 +1,6 @@
+
 buildscript {
-    ext.kotlin_version = '1.8.0'
+    ext.kotlin_version = '1.7.10'
     repositories {
         google()
         mavenCentral()
@@ -11,6 +12,12 @@ buildscript {
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
     }
 }
+
+//plugins {
+//    id "com.android.application"
+//    id "kotlin-android"
+//    id "flutter"
+//}
 
 allprojects {
     repositories {
