--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -1,6 +1,7 @@
-org.gradle.jvmargs=-Xmx1536M
+#org.gradle.jvmargs=-Xmx1536M
 android.useAndroidX=true
 android.enableJetifier=true
+org.gradle.jvmargs=-Xmx4096m
 org.gradle.java.home=/opt/homebrew/opt/openjdk@17/libexec/openjdk.jdk/Contents/Home
 
 
