--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 1.0.13+13
+version: 1.0.14+14
 
 environment:
   sdk: '>=2.18.0 <3.0.0'
@@ -66,6 +66,8 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   lottie: ^3.1.3
+  flutter_webview_plugin: ^0.4.0
+  webview_flutter: ^4.8.0
 
 
 dev_dependencies:
